[package]
name = "codex-services"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "codex_services"
path = "src/lib.rs"

[features]
default = []
# Enables OTel meter instruments. When off, `metrics::*` is a no-op stub.
observability = [
    "dep:opentelemetry",
    "dep:opentelemetry-semantic-conventions",
    "dep:sysinfo",
]
# Forwards to codex-parsers/rar for thumbnail generation from CBR.
rar = ["codex-parsers/rar"]

[dependencies]
# Workspace-inherited
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }

# Workspace-internal
codex-config = { workspace = true }
codex-db = { workspace = true }
codex-events = { workspace = true }
codex-models = { workspace = true }
codex-parsers = { workspace = true }
codex-utils = { workspace = true }

# Crate-specific
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
] }
serde_json = "1.0"
thiserror = "2.0"
csv = "1.3"

# Auth / identity
openidconnect = "4"
# IdP bearer validation (resource-server path); same version/backend as codex-utils
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.10"

# Email
lettre = { version = "0.11", default-features = false, features = [
    "tokio1",
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
] }

# HTTP client for plugin cover downloads + OAuth token exchange
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "json",
    "form",
] }

# PDF handle cache (uses pdfium-render types)
pdfium-render = { version = "0.8", features = ["sync"] }

# Image processing (cover thumbnails)
image = { version = "0.25", features = ["avif"] }
resvg = "0.47"
jxl-oxide = "0.12"

# Templating (plugin search query templates)
handlebars = "6"

# Regex (release matching, ISBN)
regex = "1.10"

# Concurrent data structures
dashmap = "6.1"
lru = "0.18"
parking_lot = "0.12"

# Async streams
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"

# URL encoding (plugin templates)
urlencoding = "2.1"

# Observability (optional)
opentelemetry = { version = "0.32", optional = true }
opentelemetry-semantic-conventions = { version = "0.32", optional = true }
sysinfo = { version = "0.39", default-features = false, features = ["system"], optional = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
# Local IdP stub (discovery + JWKS endpoints) for idp_bearer integration tests
axum = "0.8"
codex-db = { workspace = true, features = ["test-utils"] }
# Capturing tracing layer for plugin::manager span-emission tests and the
# metrics::tests in-memory exporter checks.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2"
# In-memory metric exporter used by metrics::tests. The matching prod
# feature lives in observability above; pull the SDK in dev with the
# testing feature so the dev build always has it available.
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio", "trace", "metrics", "testing"] }
