[package]
name = "codex-utils"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
name = "codex_utils"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
codex-models = { workspace = true }

# Crate-specific deps
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
chrono-tz = "0.10"
cron = "0.13"
image = { version = "0.25", features = ["avif"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
md-5 = "0.10"
quick-xml = { version = "0.39", features = ["serialize"] }
rand = "0.10"
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
unicode-normalization = "0.1"
zip = "8.1"

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
